# KINEXON-Challenge

./: Makefile  README.md  clients  clients.cpp  distributions.py  generated_position.pb.cc  generated_position.pb.h  generated_position.proto  location_generator.h  main  main.cpp  position.pb.cc  position.pb.h  position_generator.h  server  server.cpp
distribution_graphs/: distribution_graphs.py  pyproject.toml
distributions/: distributions.py  pyproject.toml
documentation/: clients.md  distribution_graphs.md  position.proto.md  position_generator.md  server.md
include/: position.pb.cc  position_generator.h
src/: Makefile  clients.cpp  position.proto  server.cpp
