[tool.poetry]
name = "distribution_graphs"
version = "0.1.0"
description = "A package for drawing distribution graphs."
authors = ["Martin <martinpfatrisch@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
