[tool.poetry]
name = "distributions"
version = "0.1.0"
description = ""
authors = ["Martin <martinpfatrisch@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
